--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,14 +8,26 @@ html {
   box-sizing: inherit;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  padding: 200px 0 50px 0;
+  min-height: 390px;
+  background: url(./images/Map.png) no-repeat bottom right #222222;
+  margin-bottom: 20px;
+}
+
 .app-title {
   text-align: center;
-  margin-top: 100px;
+  margin-bottom: 50px;
+  color: white;
 }
 
 .input-group {
   margin: 0 auto;
-  margin-top: 30px;
 }
 
 .country-container {
