--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,14 +23,34 @@ html {
 .app-title {
   text-align: center;
   margin-bottom: 50px;
-  color: white;
+  color: #ffffff;
+  font-family: "Indie Flower", cursive;
+  font-size: 83px;
 }
 
 .input-group {
   margin: 0 auto;
 }
 
+.form-control {
+  border: none;
+  border-radius: 20px;
+}
+
 .country-container {
   margin: 0 auto;
   width: 600px;
+}
+
+.list-unstyled {
+  font-family: "Muli", sans-serif;
+  font-weight: normal;
+}
+
+.media {
+  margin-bottom: 30px;
+}
+
+.card {
+  font-family: "Muli", sans-serif;
 }
