--- a/src/tamplates/country-tamplate.hbs
+++ b/src/tamplates/country-tamplate.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<div class="card mb-3" style="max-width: 540px;">
+<div class="result-card mb-3" style="max-width: 600px;">
     <div class="row no-gutters">
         <div class="col-md-4">
             <img src="{{flag}}" class="card-img" alt="{{name}}">
